fix: context and auto suggests z-index

--- a/packages/heartwood-components/components/02-forms/autosuggest.scss
+++ b/packages/heartwood-components/components/02-forms/autosuggest.scss
@@ -5,7 +5,7 @@
 .autosuggest {
 	display: none;
 	position: absolute;
-	z-index: 1;
+	z-index: 10;
 	overflow: scroll;
 	background-color: $c-bg-light;
 	border: 1px solid $c-border;
